# anchor-subscriptions

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml
client/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
client/config/: config.ts
client/creator-actions/: creator-actions.ts
client/queries/: subscription-queries.ts  tier-queries.ts
client/referral-sdk/: package-lock.json  package.json
client/referral-sdk/src/: createReferralApp.ts  index.ts  subscribeWithReferral.ts
client/referral-sdk/src/config/: config.ts
client/referral-sdk/src/utils/: pda-derivations.ts
client/shared/idl/: plege.ts  referrals.ts
client/shared/utils/: constants.ts  conversions.ts  pda-derivations.ts
client/src/: index.ts
client/src/config/: config.ts
client/src/creator-actions/: creator-actions.ts
client/src/queries/: subscription-queries.ts  tier-queries.ts
client/src/types/: interfaces.ts
client/src/types/idl/: plege.ts
client/src/utils/: conversions.ts
client/subscriber-actions/: subscriber-actions.ts
client/subscription-sdk/: package.json  tsconfig.json
client/subscription-sdk/src/: index.ts
client/types/idl/: payment.ts  plege.ts  referrals.ts
client/utils/: constants.ts  pda-derivations.ts
programs/distributions/: Cargo.toml  README.md
programs/distributions/src/: error.rs  lib.rs  pda.rs  utils.rs
programs/distributions/src/instructions/: create_distribution.rs  create_royalty_collected_treasury.rs  mod.rs
programs/distributions/src/state/: distribution.rs  mod.rs  royalty_collected_treasury.rs
programs/payment/: Cargo.toml
programs/payment/src/: lib.rs
programs/plege/: Cargo.toml
programs/plege/src/: lib.rs
programs/plege/src/error/: mod.rs
programs/plege/src/instructions/: cancel_subscription.rs  close_subscription_account.rs  complete_payment.rs  create_app.rs  create_subscription.rs  create_tier.rs  create_user.rs  mod.rs  register_callback.rs  register_payment_callback.rs  resubscribe.rs  subscribe.rs  switch_subscription_tier.rs  toggle_new_subscribers.rs
programs/plege/src/state/: app.rs  callback.rs  interval.rs  mod.rs  subscription.rs  tier.rs  user.rs
programs/referrals/: Cargo.toml
programs/referrals/src/: assertions.rs  error.rs  lib.rs
programs/referrals/src/instructions/: create_referralship.rs  mod.rs  split_payment.rs  subscribe_with_referral.rs
programs/referrals/src/state/: mod.rs  referral.rs  referralship.rs  splits.rs
tests/: basic.ts  distribution.ts  plege.ts  referrals.ts  sdk.ts  subscriptions.ts  testSetup.ts  tiers.ts
tests/unit-tests/: callback-unit-test.ts
tests/utils/: airdrop.ts  basic-functions.ts  callback.ts  globalSetup.ts  keypair.ts
(+44 files in other folders)
