[package]
name = "payment"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
plege = { path = "../plege", features = ["cpi"] }
referrals = { path = "../referrals", features = ["cpi"] }
anchor-spl = "0.25.0"
clockwork-sdk = { version = "=1.3.9", features = ["thread"] }